[package]
name = "class-methods"
version = "0.12.1"
authors = ["Emile Fugulin <code@efugulin.com>"]
edition = "2018"
publish = false

[dependencies.rquickjs]
path = "../.."
default-features = false
features = []

[features]
default = ["macro", "quickjs-ng"]
macro = ["rquickjs/macro"]
quickjs-ng = ["rquickjs/quickjs-ng"]
quickjs-og = ["rquickjs/quickjs-og", "rquickjs/bindgen"]
