[package]
name = "import-attributes"
version = "0.12.1"
authors = ["K. <kayo@illumium.org>"]
edition = "2021"
publish = false

[dependencies.rquickjs]
path = "../.."
default-features = false
features = ["rust-alloc", "loader"]

[features]
default = ["quickjs-ng"]
quickjs-ng = ["rquickjs/quickjs-ng"]
quickjs-og = ["rquickjs/quickjs-og", "rquickjs/bindgen"]
