[package]
name = "module-loader"
version = "0.12.1"
authors = ["K. <kayo@illumium.org>"]
edition = "2018"
publish = false

[dependencies.rquickjs]
path = "../.."
default-features = false
features = ["futures", "rust-alloc", "loader", "dyn-load", "std"]

[features]
default = ["macro", "quickjs-ng"]
macro = ["rquickjs/macro"]
quickjs-ng = ["rquickjs/quickjs-ng"]
quickjs-og = ["rquickjs/quickjs-og", "rquickjs/bindgen"]
