[package]
name = "rquickjs-cli"
version = "0.12.1"
authors = ["K. <kayo@illumium.org>"]
edition = "2018"
publish = false

[dependencies.rquickjs]
path = "../.."
default-features = false
features = ["std"]

[features]
default = ["quickjs-ng"]
quickjs-ng = ["rquickjs/quickjs-ng"]
quickjs-og = ["rquickjs/quickjs-og", "rquickjs/bindgen"]
